<resources>
    <string name="app_name">allowance</string>
    <string name="cat_all">전체</string>
    <string name="cat_univ">대학 전시회</string>
    <string name="cat_ind">개인 전시회</string>
    <string name="cat_else">기타</string>
    <string name="username">USERNAME</string>
    <string name="nickname">NICK NAME</string>
    <string name="pwd">PASSWORD</string>
    <string name="email">E-MAIL</string>
    <string name="sign_in">회원 등록</string>

    <string name="gallery_name">전시회 이름</string>
    <string name="gallery_location">전시회 장소</string>
    <string name="gallery_date">전시 기간</string>
    <string name="gallery_description">상세 설명</string>
    <string name="gallery_register">등록</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery_uri">uri</string>

    <string name="exhibition_visited">방문한 전시회</string>
    <string name="user_followed">팔로우한 목록</string>
    <string name="regist_exhibition">전시회 등록</string>
    <string name="title_activity_location">Location</string>
    <string name="loading">모델 로딩중입니다!</string>
    <string name="chooseIMG">마음에 드는 그림을 골라주세요!</string>

    <string name="please_leave_review">방문하신 전시회가 어땠는지 리뷰를 남겨주세요.</string>
    <string name="regist_review">리뷰 등록</string>
    <string name="logout">로그아웃</string>
</resources>