<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MyPage">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/mypage_profileImg"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectanglebg"
            android:elevation="10dp"
            android:padding="10dp"
            app:srcCompat="@drawable/profileicon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/logout"
                android:textColor="@color/light_purple_BTN"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_regist_exhibition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/regist_exhibition"
                android:textColor="@color/light_purple_BTN"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/mypage_welcome_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="홍길동님 반갑습니다!" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/rectanglebg"
            android:elevation="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp"
            android:paddingBottom="0dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/exhibition_visited" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mypage_rcView_visited"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@drawable/rectanglebg"
            android:elevation="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rectanglebg"
                android:text="@string/user_followed" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/mypage_rcView_followed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>