<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterGallery">

    <ImageButton
        android:id="@+id/input_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/image_icon"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edit_exhibition_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/gallery_name"
        android:inputType="textPersonName"
        android:shadowRadius="3"
        tools:ignore="TouchTargetSizeCheck" />
    <EditText
        android:id="@+id/edit_exhibition_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/gallery_description"
        android:inputType="textMultiLine"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_exhibition_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="간략 정보"
        android:inputType="textMultiLine"
        tools:ignore="TouchTargetSizeCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/txt_start_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="전시 시작일"
            android:inputType="date"
            tools:ignore="TouchTargetSizeCheck"
            android:onClick="showDatePicker"
            />
        <TextView
            android:layout_gravity="center"
            android:id="@+id/txt_end_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="전시 종료일"
            android:inputType="date"
            tools:ignore="TouchTargetSizeCheck"
            android:onClick="showDatePicker"/>

        </LinearLayout>
    <EditText
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="전시 장소(미구현)"
        android:inputType="textMultiLine"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/edit_exhibition_uri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/gallery_uri"
        android:inputType="textMultiLine"
        tools:ignore="TouchTargetSizeCheck" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="전시 장르"
            android:gravity="center"
            />
        <Spinner
            android:id="@+id/spinner_month"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="left">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="전시 목적"
            android:gravity="center"/>

        <Spinner
            android:id="@+id/spinner_year"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gallery_register" />

</LinearLayout>