<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLAY"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    tools:context="com.example.PeanArt.MainPage">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/main_bg">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/point" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="5dp"
            android:gravity="left|center_vertical"
            android:background="@color/main_bg"
            android:text="대구광역시" />

        <Button
            android:id="@+id/registerBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="180dp"
            android:gravity="right|center_vertical"
            android:onClick="clickFunc"
            android:text="Button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:backgroundTint="@color/main_bg">


        <Button
            android:id="@+id/btn_main_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cat_all"
            android:textSize="10sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btn_main_coll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cat_univ"
            android:textSize="9sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btn_main_inde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cat_ind"
            android:textSize="9sp"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btn_main_etc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cat_else"
            android:textSize="10sp"
            app:cornerRadius="20dp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/main_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/main_bg">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:background="@color/light_purple"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_purple">

                    <ImageView
                        android:id="@+id/cardIMG1"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/img1" />

                    <LinearLayout
                        android:id="@+id/card1_linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardIMG1"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/cardTXT1_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="대구대 전시회"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cardTXT1_info"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="대구대에서 열리는 전시회" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkBox1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="좋아요"
                        app:layout_constraintBottom_toTopOf="@+id/card1_linearLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardIMG1"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_purple">

                    <ImageView
                        android:id="@+id/cardIMG2"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/img2" />

                    <LinearLayout
                        android:id="@+id/card2_linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardIMG2"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/cardTXT2_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="경북대 전시회"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cardTXT2_info"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:autoText="false"
                            android:ellipsize="marquee"
                            android:singleLine="false"
                            tools:text="다양한 조각들이 모여 하나를 이루는 조화로운 전시회" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkBox2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="좋아요"
                        app:layout_constraintBottom_toTopOf="@+id/card2_linearLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardIMG2"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="30dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/light_purple">

                    <ImageView
                        android:id="@+id/cardIMG3"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/img3" />

                    <LinearLayout
                        android:id="@+id/card3_linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardIMG3"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/cardTXT3_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="홍길동 전시회"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/cardTXT3_info"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:text="서른 다섯명의 사람들이 모여" />
                    </LinearLayout>

                    <CheckBox
                        android:id="@+id/checkBox3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="좋아요"
                        app:layout_constraintBottom_toTopOf="@+id/card3_linearLayout"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardIMG3"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>



</LinearLayout>